packages/flutter_wasmit/ios/Classes/frb.h

typedef struct DartCObject DartCObject;
typedef struct DartCObject *WireSyncReturn;
typedef struct wire_ArcStdSyncMutexModule {
  const void *ptr;
} wire_ArcStdSyncMutexModule;
typedef struct wire_CompiledModule {
  struct wire_ArcStdSyncMutexModule field0;
} wire_CompiledModule;
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_WasmitModuleId {
  uint32_t field0;
} wire_WasmitModuleId;
typedef struct wire_Table {
  const void *ptr;
} wire_Table;
typedef struct wire_Memory {
  const void *ptr;
} wire_Memory;
typedef struct wire_RwLockSharedMemory {
  const void *ptr;
} wire_RwLockSharedMemory;
typedef struct wire_WasmitSharedMemory {
  struct wire_RwLockSharedMemory field0;
} wire_WasmitSharedMemory;
typedef union WasmValKind {
  struct wire_WasmVal_i32 *i32;
  struct wire_WasmVal_i64 *i64;
  struct wire_WasmVal_f32 *f32;
  struct wire_WasmVal_f64 *f64;
  struct wire_WasmVal_v128 *v128;
  struct wire_WasmVal_funcRef *funcRef;
  struct wire_WasmVal_externRef *externRef;
} WasmValKind;
typedef struct wire_WasmVal {
  int32_t tag;
  union WasmValKind *kind;
} wire_WasmVal;
typedef struct wire_MemoryTy {
  bool shared;
  uint32_t minimum;
  uint32_t *maximum;
} wire_MemoryTy;
WireSyncReturn wire_get_memory_pages__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                             struct wire_Memory memory);
WireSyncReturn wire_write_memory__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                         struct wire_Memory memory,
                                                         uintptr_t offset,
                                                         struct wire_uint_8_list *buffer);
WireSyncReturn wire_grow_memory__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                        struct wire_Memory memory,
                                                        uint32_t pages);
WireSyncReturn wire_get_table_size__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                           struct wire_Table table);
WireSyncReturn wire_get_table_type__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                           struct wire_Table table);
WireSyncReturn wire_grow_table__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                       struct wire_Table table,
                                                       uint32_t delta,
                                                       struct wire_WasmVal *value);
WireSyncReturn wire_get_table__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                      struct wire_Table table,
                                                      uint32_t index);
WireSyncReturn wire_set_table__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                      struct wire_Table table,
                                                      uint32_t index,
                                                      struct wire_WasmVal *value);
WireSyncReturn wire_fill_table__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                       struct wire_Table table,
                                                       uint32_t index,
                                                       struct wire_WasmVal *value,
                                                       uint32_t len);
WireSyncReturn wire_add_fuel__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                     uint64_t delta);
WireSyncReturn wire_fuel_consumed__method__WasmitModuleId(struct wire_WasmitModuleId *that);
WireSyncReturn wire_consume_fuel__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                         uint64_t delta);
WireSyncReturn wire_create_shared_memory__method__CompiledModule(struct wire_CompiledModule *that,
                                                                 struct wire_MemoryTy *memory_type);
WireSyncReturn wire_get_module_imports__method__CompiledModule(struct wire_CompiledModule *that);
WireSyncReturn wire_get_module_exports__method__CompiledModule(struct wire_CompiledModule *that);
WireSyncReturn wire_ty__method__WasmitSharedMemory(struct wire_WasmitSharedMemory *that);
WireSyncReturn wire_size__method__WasmitSharedMemory(struct wire_WasmitSharedMemory *that);