packages/wasmit/lib/src/bridge_generated.io.dart


  WireSyncReturn wire_get_memory_pages__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    wire_Memory memory,
  ) {
    return _wire_get_memory_pages__method__WasmitModuleId(
      that,
      memory,
    );
  }

  late final _wire_get_memory_pages__method__WasmitModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
              wire_Memory)>>('wire_get_memory_pages__method__WasmitModuleId');
  late final _wire_get_memory_pages__method__WasmitModuleId =
      _wire_get_memory_pages__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitModuleId>, wire_Memory)>();

  WireSyncReturn wire_write_memory__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    wire_Memory memory,
    int offset,
    ffi.Pointer<wire_uint_8_list> buffer,
  ) {
    return _wire_write_memory__method__WasmitModuleId(
      that,
      memory,
      offset,
      buffer,
    );
  }

  late final _wire_write_memory__method__WasmitModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
                  wire_Memory, ffi.UintPtr, ffi.Pointer<wire_uint_8_list>)>>(
      'wire_write_memory__method__WasmitModuleId');
  late final _wire_write_memory__method__WasmitModuleId =
      _wire_write_memory__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>, wire_Memory,
              int, ffi.Pointer<wire_uint_8_list>)>();

  WireSyncReturn wire_grow_memory__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    wire_Memory memory,
    int pages,
  ) {
    return _wire_grow_memory__method__WasmitModuleId(
      that,
      memory,
      pages,
    );
  }

  late final _wire_grow_memory__method__WasmitModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>, wire_Memory,
              ffi.Uint32)>>('wire_grow_memory__method__WasmitModuleId');
  late final _wire_grow_memory__method__WasmitModuleId =
      _wire_grow_memory__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitModuleId>, wire_Memory, int)>();

  WireSyncReturn wire_get_table_size__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    wire_Table table,
  ) {
    return _wire_get_table_size__method__WasmitModuleId(
      that,
      table,
    );
  }

  late final _wire_get_table_size__method__WasmitModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
              wire_Table)>>('wire_get_table_size__method__WasmitModuleId');
  late final _wire_get_table_size__method__WasmitModuleId =
      _wire_get_table_size__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitModuleId>, wire_Table)>();

  WireSyncReturn wire_get_table_type__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    wire_Table table,
  ) {
    return _wire_get_table_type__method__WasmitModuleId(
      that,
      table,
    );
  }

  late final _wire_get_table_type__method__WasmitModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
              wire_Table)>>('wire_get_table_type__method__WasmitModuleId');
  late final _wire_get_table_type__method__WasmitModuleId =
      _wire_get_table_type__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitModuleId>, wire_Table)>();

  WireSyncReturn wire_grow_table__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    wire_Table table,
    int delta,
    ffi.Pointer<wire_WasmVal> value,
  ) {
    return _wire_grow_table__method__WasmitModuleId(
      that,
      table,
      delta,
      value,
    );
  }

  late final _wire_grow_table__method__WasmitModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
                  wire_Table, ffi.Uint32, ffi.Pointer<wire_WasmVal>)>>(
      'wire_grow_table__method__WasmitModuleId');
  late final _wire_grow_table__method__WasmitModuleId =
      _wire_grow_table__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>, wire_Table,
              int, ffi.Pointer<wire_WasmVal>)>();

  WireSyncReturn wire_get_table__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    wire_Table table,
    int index,
  ) {
    return _wire_get_table__method__WasmitModuleId(
      that,
      table,
      index,
    );
  }

  late final _wire_get_table__method__WasmitModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>, wire_Table,
              ffi.Uint32)>>('wire_get_table__method__WasmitModuleId');
  late final _wire_get_table__method__WasmitModuleId =
      _wire_get_table__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitModuleId>, wire_Table, int)>();

  WireSyncReturn wire_set_table__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    wire_Table table,
    int index,
    ffi.Pointer<wire_WasmVal> value,
  ) {
    return _wire_set_table__method__WasmitModuleId(
      that,
      table,
      index,
      value,
    );
  }

  late final _wire_set_table__method__WasmitModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
                  wire_Table, ffi.Uint32, ffi.Pointer<wire_WasmVal>)>>(
      'wire_set_table__method__WasmitModuleId');
  late final _wire_set_table__method__WasmitModuleId =
      _wire_set_table__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>, wire_Table,
              int, ffi.Pointer<wire_WasmVal>)>();

  WireSyncReturn wire_fill_table__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    wire_Table table,
    int index,
    ffi.Pointer<wire_WasmVal> value,
    int len,
  ) {
    return _wire_fill_table__method__WasmitModuleId(
      that,
      table,
      index,
      value,
      len,
    );
  }

  late final _wire_fill_table__method__WasmitModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitModuleId>,
              wire_Table,
              ffi.Uint32,
              ffi.Pointer<wire_WasmVal>,
              ffi.Uint32)>>('wire_fill_table__method__WasmitModuleId');
  late final _wire_fill_table__method__WasmitModuleId =
      _wire_fill_table__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>, wire_Table,
              int, ffi.Pointer<wire_WasmVal>, int)>();

  WireSyncReturn wire_add_fuel__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    int delta,
  ) {
    return _wire_add_fuel__method__WasmitModuleId(
      that,
      delta,
    );
  }

  late final _wire_add_fuel__method__WasmitModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
              ffi.Uint64)>>('wire_add_fuel__method__WasmitModuleId');
  late final _wire_add_fuel__method__WasmitModuleId =
      _wire_add_fuel__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>, int)>();

  WireSyncReturn wire_fuel_consumed__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
  ) {
    return _wire_fuel_consumed__method__WasmitModuleId(
      that,
    );
  }

  late final _wire_fuel_consumed__method__WasmitModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>)>>(
      'wire_fuel_consumed__method__WasmitModuleId');
  late final _wire_fuel_consumed__method__WasmitModuleId =
      _wire_fuel_consumed__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>)>();

  WireSyncReturn wire_consume_fuel__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    int delta,
  ) {
    return _wire_consume_fuel__method__WasmitModuleId(
      that,
      delta,
    );
  }

  late final _wire_consume_fuel__method__WasmitModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
              ffi.Uint64)>>('wire_consume_fuel__method__WasmitModuleId');
  late final _wire_consume_fuel__method__WasmitModuleId =
      _wire_consume_fuel__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>, int)>();

  WireSyncReturn wire_create_shared_memory__method__CompiledModule(
    ffi.Pointer<wire_CompiledModule> that,
    ffi.Pointer<wire_MemoryTy> memory_type,
  ) {
    return _wire_create_shared_memory__method__CompiledModule(
      that,
      memory_type,
    );
  }

  late final _wire_create_shared_memory__method__CompiledModulePtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_CompiledModule>,
                  ffi.Pointer<wire_MemoryTy>)>>(
      'wire_create_shared_memory__method__CompiledModule');
  late final _wire_create_shared_memory__method__CompiledModule =
      _wire_create_shared_memory__method__CompiledModulePtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_CompiledModule>, ffi.Pointer<wire_MemoryTy>)>();

  WireSyncReturn wire_get_module_imports__method__CompiledModule(
    ffi.Pointer<wire_CompiledModule> that,
  ) {
    return _wire_get_module_imports__method__CompiledModule(
      that,
    );
  }

  late final _wire_get_module_imports__method__CompiledModulePtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_CompiledModule>)>>(
      'wire_get_module_imports__method__CompiledModule');
  late final _wire_get_module_imports__method__CompiledModule =
      _wire_get_module_imports__method__CompiledModulePtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_CompiledModule>)>();

  WireSyncReturn wire_get_module_exports__method__CompiledModule(
    ffi.Pointer<wire_CompiledModule> that,
  ) {
    return _wire_get_module_exports__method__CompiledModule(
      that,
    );
  }

  late final _wire_get_module_exports__method__CompiledModulePtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_CompiledModule>)>>(
      'wire_get_module_exports__method__CompiledModule');
  late final _wire_get_module_exports__method__CompiledModule =
      _wire_get_module_exports__method__CompiledModulePtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_CompiledModule>)>();

  WireSyncReturn wire_ty__method__WasmitSharedMemory(
    ffi.Pointer<wire_WasmitSharedMemory> that,
  ) {
    return _wire_ty__method__WasmitSharedMemory(
      that,
    );
  }

  late final _wire_ty__method__WasmitSharedMemoryPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmitSharedMemory>)>>(
      'wire_ty__method__WasmitSharedMemory');
  late final _wire_ty__method__WasmitSharedMemory =
      _wire_ty__method__WasmitSharedMemoryPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitSharedMemory>)>();

  WireSyncReturn wire_size__method__WasmitSharedMemory(
    ffi.Pointer<wire_WasmitSharedMemory> that,
  ) {
    return _wire_size__method__WasmitSharedMemory(
      that,
    );
  }
